<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_addItem"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/add_item"/>
    <item
        android:id="@+id/menu_duedate"
        android:title="@string/sortbydue">
    </item>
    <item
        android:id="@+id/menu_priority"
        android:title="@string/sortbypriority">
    </item>
    <!--
    <item android:id="@+id/menu_changepwd" android:title="@string/changepwd"
        ></item>
    <item android:id="@+id/menu_logout" android:title="@string/logout"
        ></item>
    
    <item android:id="@+id/menu_clearDeleted" android:title="@string/clear_deleted"
        ></item>
    -->
    <item
        android:id="@+id/menu_clear_completed"
        android:title="@string/clear_completed">
    </item>
    <item
        android:id="@+id/menu_sync"
        android:title="@string/sync">
    </item>
  
</menu>