<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_space_interval" />

        <LinearLayout
            android:id="@+id/edit_group_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/edit_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_name_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/item_name_default"
                android:maxLength="140"
                android:textSize="@dimen/text_size_medium" >
            </EditText>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_space_interval" />

        <LinearLayout
            android:id="@+id/edit_group_priority"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/edit_priority_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/text_size_small" />

            <SeekBar
                android:id="@+id/edit_priority_seekbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="2"
                android:minWidth="200dp"
                android:progress="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_space_interval" />

        <LinearLayout
            android:id="@+id/edit_group_due"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/edit_due_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_due_time" />

            <DatePicker
                android:id="@+id/edit_due_datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false" />

            <TimePicker
                android:id="@+id/edit_due_timepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_space_interval" />

        <LinearLayout
            android:id="@+id/edit_group_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/edit_cancel_button"
                android:layout_width="@dimen/button_with"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/inside_margin"
                android:onClick="onCancelClick"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/edit_save_button"
                android:layout_width="@dimen/button_with"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inside_margin"
                android:onClick="onSaveClick"
                android:text="@string/save_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>